# GreekMythologySFMLGame

./: .gitignore  CMakeLists.txt  README.md  main.cpp
config/: menus.ini
config/profiles/: profile.ini
lib/: GL.cpp  GL.h  GUI.cpp  GUI.h  Game.cpp  Game.h  INIReader.cpp  INIReader.h  triggers.cpp  triggers.h
